2009-12-31        svu

	* services.xml, sql/SqlPlugin.java, sql/SqlPluginPVListener.java:
	adapt the code to the latest version of PV.
	* SqlPlugin.props, docs/users-guide.xml, build.xml: fix the build
	process, using latest jEdit build env

2009-01-20        svu

	* users-guide.xml, sql/serverTypes/teradata.xml,
	sql/SqlServerType.java: added Teradata JDBC Type 4 driver (basic
	support).

2007-03-14        svu

	* sql/ResultSetPanel.java: Fixed sorting of the columns with null
	values

2007-02-28        svu

	* sql/ResultSetPanel.java: Fixed record count label update (the
	previous label was not being hidden)

2007-02-09        svu

	* sql/ResultSetPanel.java: Stop requerying when result set panel is
	closed

2007-02-05        svu

	* SqlPlugin.props: bumping plugin version, as requested

2007-02-02        svu

	* SqlPlugin.props, sql/ResultSetPanel.java,
	sql/options/GeneralOptionPane.java: make requery period configurable

2007-02-01        svu

	* sql/SqlTextPublisher.java, sql/ResultSetWindow.java: requerying
	result set actuall works now
	* SqlPlugin.props, sql/ResultSetWindowPopup.java,
	sql/ResultSetPanel.java, sql/options/GeneralOptionPane.java,
	sql/SqlPlugin.java, sql/SqlTextPublisher.java,
	sql/ResultSetWindow.java: splitting ResultSetPanel, periodic
	requerying works now (with hardcoded interval, so far)

2007-01-30        svu

	* SqlPlugin.props, sql/SqlTextPublisher.java,
	sql/ResultSetWindow.java: adding repeat query button to the result
	window, putting the query text into the table data model (RSW.Data
	class)
	* icons/repeatSameQuery.png, icons/closebox.png, icons/closebox.gif:
	getting rid of .gif icon, adding tiny icon for the repeat query button
	on the ResultSetWindow

2007-01-25        svu

	* sql/ResultSetWindowPopup.java, sql/SqlTextPublisher.java,
	sql/ResultSetWindow.java, sql/SqlServerType.java: using proper
	server-specific formatting for ResultSetWindow (including clipboard
	operations)